main_cat_area css done

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             <div class="search_area">
               <input
                 type="search"
-                class="search_area"
+                class="search"
                 placeholder="Search..."
               />
               <a href="#" class="btn"
@@ -315,154 +315,172 @@
           <div class="all_category">
             <div class="single_category">
               <picture>
-                <img src="./images/cat_1.png" alt="Category">
+                <img src="./images/cat_1.png" alt="Category" />
               </picture>
-              <div class="cat_name">
-                <h3>System Administration and IT Infrastructure</h3>
-              </div>
-              <div class="count">
-                <p><i class="fa-solid fa-user"></i> 42 user</p>
-                <p><i class="fa-solid fa-stopwatch"></i> 100 min</p>
-              </div>
-              <div class="user_area">
-                <picture>
-                  <img src="./images/user.png" alt="User">
-                </picture>
-                <div class="name">
-                  <h3>Afonso Pinto</h3>
-                  <p>Designer</p>
+              <div class="single_category_details">
+                <div class="cat_name">
+                  <h3>System Administration and IT Infrastructure</h3>
+                </div>
+                <div class="count">
+                  <p><i class="fa-solid fa-user"></i> 42 user</p>
+                  <p><i class="fa-solid fa-stopwatch"></i> 100 min</p>
+                </div>
+                <div class="user_area">
+                  <picture>
+                    <img src="./images/user.png" alt="User" />
+                  </picture>
+                  <div class="name">
+                    <h3>Afonso Pinto</h3>
+                    <p>Designer</p>
+                  </div>
+                </div>
+                <div class="price">
+                  <p>$19</p>
+                  <a href="#">Get Started</a>
                 </div>
               </div>
-              <div class="price">
-                <p>$19</p> 
-                <a href="#">Get Started</a>
-              </div>
-            </div> <!--/single category-->
+            </div>
+            <!--/single category-->
             <div class="single_category">
               <picture>
-                <img src="./images/cat_2.png" alt="Category">
+                <img src="./images/cat_2.png" alt="Category" />
               </picture>
-              <div class="cat_name">
-                <h3>System Administration and IT Infrastructure</h3>
-              </div>
-              <div class="count">
-                <p><i class="fa-solid fa-user"></i> 42 user</p>
-                <p><i class="fa-solid fa-stopwatch"></i> 100 min</p>
-              </div>
-              <div class="user_area">
-                <picture>
-                  <img src="./images/user.png" alt="User">
-                </picture>
-                <div class="name">
-                  <h3>Afonso Pinto</h3>
-                  <p>Designer</p>
+              <div class="single_category_details">
+                <div class="cat_name">
+                  <h3>System Administration and IT Infrastructure</h3>
+                </div>
+                <div class="count">
+                  <p><i class="fa-solid fa-user" style="--color:#6483F6"></i> 42 user</p>
+                  <p><i class="fa-solid fa-stopwatch" style="--color:#F07867"></i> 100 min</p>
+                </div>
+                <div class="user_area">
+                  <picture>
+                    <img src="./images/user.png" alt="User" />
+                  </picture>
+                  <div class="name">
+                    <h3>Afonso Pinto</h3>
+                    <p>Designer</p>
+                  </div>
+                </div>
+                <div class="price">
+                  <p>$19</p>
+                  <a href="#">Get Started</a>
                 </div>
               </div>
-              <div class="price">
-                <p>$19</p> 
-                <a href="#">Get Started</a>
-              </div>
-            </div> <!--/single category-->
+            </div>
+            <!--/single category-->
             <div class="single_category">
               <picture>
-                <img src="./images/cat_3.png" alt="Category">
+                <img src="./images/cat_3.png" alt="Category" />
               </picture>
-              <div class="cat_name">
-                <h3>System Administration and IT Infrastructure</h3>
-              </div>
-              <div class="count">
-                <p><i class="fa-solid fa-user"></i> 42 user</p>
-                <p><i class="fa-solid fa-stopwatch"></i> 100 min</p>
-              </div>
-              <div class="user_area">
-                <picture>
-                  <img src="./images/user.png" alt="User">
-                </picture>
-                <div class="name">
-                  <h3>Afonso Pinto</h3>
-                  <p>Designer</p>
+              <div class="single_category_details">
+                <div class="cat_name">
+                  <h3>System Administration and IT Infrastructure</h3>
+                </div>
+                <div class="count">
+                  <p><i class="fa-solid fa-user" style="--color:#6483F6"></i> 42 user</p>
+                  <p><i class="fa-solid fa-stopwatch" style="--color:#F07867"></i> 100 min</p>
+                </div>
+                <div class="user_area">
+                  <picture>
+                    <img src="./images/user.png" alt="User" />
+                  </picture>
+                  <div class="name">
+                    <h3>Afonso Pinto</h3>
+                    <p>Designer</p>
+                  </div>
+                </div>
+                <div class="price">
+                  <p>$19</p>
+                  <a href="#">Get Started</a>
                 </div>
               </div>
-              <div class="price">
-                <p>$19</p> 
-                <a href="#">Get Started</a>
-              </div>
-            </div> <!--/single category-->
+            </div>
+            <!--/single category-->
             <div class="single_category">
               <picture>
-                <img src="./images/cat_4.png" alt="Category">
+                <img src="./images/cat_4.png" alt="Category" />
               </picture>
-              <div class="cat_name">
-                <h3>System Administration and IT Infrastructure</h3>
-              </div>
-              <div class="count">
-                <p><i class="fa-solid fa-user"></i> 42 user</p>
-                <p><i class="fa-solid fa-stopwatch"></i> 100 min</p>
-              </div>
-              <div class="user_area">
-                <picture>
-                  <img src="./images/user.png" alt="User">
-                </picture>
-                <div class="name">
-                  <h3>Afonso Pinto</h3>
-                  <p>Designer</p>
+              <div class="single_category_details">
+                <div class="cat_name">
+                  <h3>System Administration and IT Infrastructure</h3>
+                </div>
+                <div class="count">
+                  <p><i class="fa-solid fa-user" style="--color:#6483F6"></i> 42 user</p>
+                  <p><i class="fa-solid fa-stopwatch" style="--color:#F07867"></i> 100 min</p>
+                </div>
+                <div class="user_area">
+                  <picture>
+                    <img src="./images/user.png" alt="User" />
+                  </picture>
+                  <div class="name">
+                    <h3>Afonso Pinto</h3>
+                    <p>Designer</p>
+                  </div>
+                </div>
+                <div class="price">
+                  <p>$19</p>
+                  <a href="#">Get Started</a>
                 </div>
               </div>
-              <div class="price">
-                <p>$19</p> 
-                <a href="#">Get Started</a>
-              </div>
-            </div> <!--/single category-->
+            </div>
+            <!--/single category-->
             <div class="single_category">
               <picture>
-                <img src="./images/cat_5.png" alt="Category">
+                <img src="./images/cat_5.png" alt="Category" />
               </picture>
-              <div class="cat_name">
-                <h3>System Administration and IT Infrastructure</h3>
-              </div>
-              <div class="count">
-                <p><i class="fa-solid fa-user"></i> 42 user</p>
-                <p><i class="fa-solid fa-stopwatch"></i> 100 min</p>
-              </div>
-              <div class="user_area">
-                <picture>
-                  <img src="./images/user.png" alt="User">
-                </picture>
-                <div class="name">
-                  <h3>Afonso Pinto</h3>
-                  <p>Designer</p>
+              <div class="single_category_details">
+                <div class="cat_name">
+                  <h3>System Administration and IT Infrastructure</h3>
+                </div>
+                <div class="count">
+                  <p><i class="fa-solid fa-user" style="--color:#6483F6"></i> 42 user</p>
+                  <p><i class="fa-solid fa-stopwatch" style="--color:#F07867"></i> 100 min</p>
+                </div>
+                <div class="user_area">
+                  <picture>
+                    <img src="./images/user.png" alt="User" />
+                  </picture>
+                  <div class="name">
+                    <h3>Afonso Pinto</h3>
+                    <p>Designer</p>
+                  </div>
+                </div>
+                <div class="price">
+                  <p>$19</p>
+                  <a href="#">Get Started</a>
                 </div>
               </div>
-              <div class="price">
-                <p>$19</p> 
-                <a href="#">Get Started</a>
-              </div>
-            </div> <!--/single category-->
+            </div>
+            <!--/single category-->
             <div class="single_category">
               <picture>
-                <img src="./images/cat_6.png" alt="Category">
+                <img src="./images/cat_6.png" alt="Category" />
               </picture>
-              <div class="cat_name">
-                <h3>System Administration and IT Infrastructure</h3>
-              </div>
-              <div class="count">
-                <p><i class="fa-solid fa-user"></i> 42 user</p>
-                <p><i class="fa-solid fa-stopwatch"></i> 100 min</p>
-              </div>
-              <div class="user_area">
-                <picture>
-                  <img src="./images/user.png" alt="User">
-                </picture>
-                <div class="name">
-                  <h3>Afonso Pinto</h3>
-                  <p>Designer</p>
+              <div class="single_category_details">
+                <div class="cat_name">
+                  <h3>System Administration and IT Infrastructure</h3>
+                </div>
+                <div class="count">
+                  <p><i class="fa-solid fa-user" style="--color:#6483F6"></i> 42 user</p>
+                  <p><i class="fa-solid fa-stopwatch" style="--color:#F07867"></i> 100 min</p>
+                </div>
+                <div class="user_area">
+                  <picture>
+                    <img src="./images/user.png" alt="User" />
+                  </picture>
+                  <div class="name">
+                    <h3>Afonso Pinto</h3>
+                    <p>Designer</p>
+                  </div>
+                </div>
+                <div class="price">
+                  <p>$19</p>
+                  <a href="#">Get Started</a>
                 </div>
               </div>
-              <div class="price">
-                <p>$19</p> 
-                <a href="#">Get Started</a>
-              </div>
-            </div> <!--/single category-->
+            </div>
+            <!--/single category-->
           </div>
         </div>
         <div class="explore_all_btn">
