Testimonial Area html added

--- a/index.html
+++ b/index.html
@@ -302,11 +302,7 @@
               </p>
             </div>
             <div class="search_area">
-              <input
-                type="search"
-                class="search"
-                placeholder="Search..."
-              />
+              <input type="search" class="search" placeholder="Search..." />
               <a href="#" class="btn"
                 ><i class="fa-solid fa-magnifying-glass"></i
               ></a>
@@ -350,8 +346,17 @@
                   <h3>System Administration and IT Infrastructure</h3>
                 </div>
                 <div class="count">
-                  <p><i class="fa-solid fa-user" style="--color:#6483F6"></i> 42 user</p>
-                  <p><i class="fa-solid fa-stopwatch" style="--color:#F07867"></i> 100 min</p>
+                  <p>
+                    <i class="fa-solid fa-user" style="--color: #6483f6"></i> 42
+                    user
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-stopwatch"
+                      style="--color: #f07867"
+                    ></i>
+                    100 min
+                  </p>
                 </div>
                 <div class="user_area">
                   <picture>
@@ -378,8 +383,17 @@
                   <h3>System Administration and IT Infrastructure</h3>
                 </div>
                 <div class="count">
-                  <p><i class="fa-solid fa-user" style="--color:#6483F6"></i> 42 user</p>
-                  <p><i class="fa-solid fa-stopwatch" style="--color:#F07867"></i> 100 min</p>
+                  <p>
+                    <i class="fa-solid fa-user" style="--color: #6483f6"></i> 42
+                    user
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-stopwatch"
+                      style="--color: #f07867"
+                    ></i>
+                    100 min
+                  </p>
                 </div>
                 <div class="user_area">
                   <picture>
@@ -406,8 +420,17 @@
                   <h3>System Administration and IT Infrastructure</h3>
                 </div>
                 <div class="count">
-                  <p><i class="fa-solid fa-user" style="--color:#6483F6"></i> 42 user</p>
-                  <p><i class="fa-solid fa-stopwatch" style="--color:#F07867"></i> 100 min</p>
+                  <p>
+                    <i class="fa-solid fa-user" style="--color: #6483f6"></i> 42
+                    user
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-stopwatch"
+                      style="--color: #f07867"
+                    ></i>
+                    100 min
+                  </p>
                 </div>
                 <div class="user_area">
                   <picture>
@@ -434,8 +457,17 @@
                   <h3>System Administration and IT Infrastructure</h3>
                 </div>
                 <div class="count">
-                  <p><i class="fa-solid fa-user" style="--color:#6483F6"></i> 42 user</p>
-                  <p><i class="fa-solid fa-stopwatch" style="--color:#F07867"></i> 100 min</p>
+                  <p>
+                    <i class="fa-solid fa-user" style="--color: #6483f6"></i> 42
+                    user
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-stopwatch"
+                      style="--color: #f07867"
+                    ></i>
+                    100 min
+                  </p>
                 </div>
                 <div class="user_area">
                   <picture>
@@ -462,8 +494,17 @@
                   <h3>System Administration and IT Infrastructure</h3>
                 </div>
                 <div class="count">
-                  <p><i class="fa-solid fa-user" style="--color:#6483F6"></i> 42 user</p>
-                  <p><i class="fa-solid fa-stopwatch" style="--color:#F07867"></i> 100 min</p>
+                  <p>
+                    <i class="fa-solid fa-user" style="--color: #6483f6"></i> 42
+                    user
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-stopwatch"
+                      style="--color: #f07867"
+                    ></i>
+                    100 min
+                  </p>
                 </div>
                 <div class="user_area">
                   <picture>
@@ -495,7 +536,32 @@
     <!-- testimonial_area Start -->
 
     <section class="testimonial_area">
-      <div class="container"></div>
+      <div class="container">
+        <div class="testimonial_content">
+          <div class="testimonial_img">
+            <picture>
+              <img src="./images/testimonial_1.png" alt="User" />
+            </picture>
+            <div class="testimonial_text">
+              <p>
+                Minuteness of the parts formed a great hindrance to my speed, I
+                resolved, contrary to my first intention, to make the being of a
+                gigantic stature that is to say, about eight feet in height.
+              </p>
+              <h5>Chinmay Sarasvati</h5>
+              <br />
+              <span>Microsoft</span>
+            </div>
+          </div>
+          <!--/testimonial_img-->
+          <div class="testimonial_details">
+            <h4>testimonials</h4>
+            <h2>Our Students Say About Us</h2>
+            <h6>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</h6>
+            <p>By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the middle.</p>
+          </div>
+        </div>
+      </div>
       <!--/container-->
     </section>
 
