Testimonial Area CSS added

--- a/index.html
+++ b/index.html
@@ -539,6 +539,12 @@
       <div class="container">
         <div class="testimonial_content">
           <div class="testimonial_img">
+
+            <span class="shape"></span>
+            <span class="shape"><img src="./images/testimonial_shape_2.png" alt=""></span>
+            <span class="shape"><img src="./images/testimonial_shape_1.png" alt=""></span>
+            <span class="shape"><img src="./images/testimonial_shape_3.png" alt=""></span>
+            <span class="shape"></span>
             <picture>
               <img src="./images/testimonial_1.png" alt="User" />
             </picture>
@@ -549,7 +555,7 @@
                 gigantic stature that is to say, about eight feet in height.
               </p>
               <h5>Chinmay Sarasvati</h5>
-              <br />
+             
               <span>Microsoft</span>
             </div>
           </div>
@@ -557,7 +563,7 @@
           <div class="testimonial_details">
             <h4>testimonials</h4>
             <h2>Our Students Say About Us</h2>
-            <h6>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</h6>
+            <h5>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</h5>
             <p>By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the middle.</p>
           </div>
         </div>
