Featured Area HTML done

--- a/index.html
+++ b/index.html
@@ -576,7 +576,64 @@
     <!-- our_feature_area Start -->
 
     <section class="our_feature_area">
-      <div class="container"></div>
+      <div class="container">
+        <div class="our_feature_content">
+          <div class="feature_heading">
+            <h4>testimonials</h4>
+            <h2>Our Students Say About Us</h2>
+            <h5>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</h5>
+            <p>By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the middle.</p>
+          </div>
+          <div class="feature_list">
+            <span class="f_shape">
+              <picture>
+                <img src="./images/testimonial_shape_1.png" alt="">
+              </picture>
+            </span>
+            <span class="f_shape">
+              <picture>
+                <img src="./images/testimonial_shape_2.png" alt="">
+              </picture>
+            </span>
+            <span class="f_shape">
+              <picture>
+                <img src="./images/testimonial_shape_2.png" alt="">
+              </picture>
+            </span>
+            <span class="f_shape"></span>
+           
+            <ul>
+              <li>
+                <div class="feature_icon">
+                  <i class="fa-solid fa-person-chalkboard"></i>
+                </div>
+                <div class="details">
+                  <h3>Powerful Tools</h3>
+                  <p>Peep at some distant orb has power to raise and purify our thoughts.</p>
+                </div>
+              </li>
+              <li>
+                <div class="feature_icon">
+                  <i class="fa-solid fa-graduation-cap"></i>
+                </div>
+                <div class="details">
+                  <h3>Actual Skills</h3>
+                  <p>Some distant orb has power to raise and purify our thoughts like a strain.</p>
+                </div>
+              </li>
+              <li>
+                <div class="feature_icon">
+                  <i class="fa-solid fa-book"></i>
+                </div>
+                <div class="details">
+                  <h3>Growth Yourself</h3>
+                  <p>Distant orb has power to raise and purify our thoughts like a strain.</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <!--/container-->
     </section>
 
