our feature area css done

--- a/index.html
+++ b/index.html
@@ -579,8 +579,8 @@
       <div class="container">
         <div class="our_feature_content">
           <div class="feature_heading">
-            <h4>testimonials</h4>
-            <h2>Our Students Say About Us</h2>
+            <h4>features</h4>
+            <h2>Professionals and Experts</h2>
             <h5>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</h5>
             <p>By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the middle.</p>
           </div>
@@ -623,7 +623,7 @@
               </li>
               <li>
                 <div class="feature_icon">
-                  <i class="fa-solid fa-book"></i>
+                  <i class="fa-solid fa-arrow-trend-up"></i>
                 </div>
                 <div class="details">
                   <h3>Growth Yourself</h3>
