Our User Area done

--- a/index.html
+++ b/index.html
@@ -642,21 +642,43 @@
     <!-- our_user_area Start -->
 
     <section class="our_user_area">
-      <div class="container"></div>
+      <div class="container">
+        <div class="our_user_content">
+          <ul>
+            <li>
+              <picture>
+                <img src="./images/our_user_1.png" alt="our user">
+              </picture>
+            </li>
+            <li>
+              <picture>
+                <img src="./images/our_user_2.png" alt="our user">
+              </picture>
+            </li>
+            <li>
+              <picture>
+                <img src="./images/our_user_3.png" alt="our user">
+              </picture>
+            </li>
+            <li>
+              <picture>
+                <img src="./images/our_user_4.png" alt="our user">
+              </picture>
+            </li>
+            <li>
+              <picture>
+                <img src="./images/our_user_5.png" alt="our user">
+              </picture>
+            </li>
+          </ul>
+        </div>
+      </div>
       <!--/container-->
     </section>
 
     <!-- our_user_area End -->
 
-    <!-- our_user_area Start -->
-
-    <section class="our_user_area">
-      <div class="container"></div>
-      <!--/container-->
-    </section>
-
-    <!-- our_user_area End -->
-
+   
     <!-- get_started_area Start -->
 
     <section class="get_started_area">
