get started area done

--- a/index.html
+++ b/index.html
@@ -682,7 +682,15 @@
     <!-- get_started_area Start -->
 
     <section class="get_started_area">
-      <div class="container"></div>
+      <div class="container">
+        <div class="get_started_content">
+          <div class="get_heading">
+            <h3>10K+ Students take this course.
+              What are you waiting for?</h3>
+              <a href="#" class="btn">get started now</a>
+          </div>
+        </div>
+      </div>
       <!--/container-->
     </section>
 
