footer area html done

--- a/index.html
+++ b/index.html
@@ -539,11 +539,16 @@
       <div class="container">
         <div class="testimonial_content">
           <div class="testimonial_img">
-
             <span class="shape"></span>
-            <span class="shape"><img src="./images/testimonial_shape_2.png" alt=""></span>
-            <span class="shape"><img src="./images/testimonial_shape_1.png" alt=""></span>
-            <span class="shape"><img src="./images/testimonial_shape_3.png" alt=""></span>
+            <span class="shape"
+              ><img src="./images/testimonial_shape_2.png" alt=""
+            /></span>
+            <span class="shape"
+              ><img src="./images/testimonial_shape_1.png" alt=""
+            /></span>
+            <span class="shape"
+              ><img src="./images/testimonial_shape_3.png" alt=""
+            /></span>
             <span class="shape"></span>
             <picture>
               <img src="./images/testimonial_1.png" alt="User" />
@@ -555,7 +560,7 @@
                 gigantic stature that is to say, about eight feet in height.
               </p>
               <h5>Chinmay Sarasvati</h5>
-             
+
               <span>Microsoft</span>
             </div>
           </div>
@@ -563,8 +568,15 @@
           <div class="testimonial_details">
             <h4>testimonials</h4>
             <h2>Our Students Say About Us</h2>
-            <h5>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</h5>
-            <p>By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the middle.</p>
+            <h5>
+              Apparently we had reached a great height in the atmosphere, for
+              the sky was a dead black.
+            </h5>
+            <p>
+              By the same illusion which lifts the horizon of the sea to the
+              level of the spectator on a hillside, the sable cloud beneath was
+              dished out, and the car seemed to float in the middle.
+            </p>
           </div>
         </div>
       </div>
@@ -581,27 +593,34 @@
           <div class="feature_heading">
             <h4>features</h4>
             <h2>Professionals and Experts</h2>
-            <h5>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</h5>
-            <p>By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the middle.</p>
+            <h5>
+              Apparently we had reached a great height in the atmosphere, for
+              the sky was a dead black.
+            </h5>
+            <p>
+              By the same illusion which lifts the horizon of the sea to the
+              level of the spectator on a hillside, the sable cloud beneath was
+              dished out, and the car seemed to float in the middle.
+            </p>
           </div>
           <div class="feature_list">
             <span class="f_shape">
               <picture>
-                <img src="./images/testimonial_shape_1.png" alt="">
+                <img src="./images/testimonial_shape_1.png" alt="" />
               </picture>
             </span>
             <span class="f_shape">
               <picture>
-                <img src="./images/testimonial_shape_2.png" alt="">
+                <img src="./images/testimonial_shape_2.png" alt="" />
               </picture>
             </span>
             <span class="f_shape">
               <picture>
-                <img src="./images/testimonial_shape_2.png" alt="">
+                <img src="./images/testimonial_shape_2.png" alt="" />
               </picture>
             </span>
             <span class="f_shape"></span>
-           
+
             <ul>
               <li>
                 <div class="feature_icon">
@@ -609,7 +628,10 @@
                 </div>
                 <div class="details">
                   <h3>Powerful Tools</h3>
-                  <p>Peep at some distant orb has power to raise and purify our thoughts.</p>
+                  <p>
+                    Peep at some distant orb has power to raise and purify our
+                    thoughts.
+                  </p>
                 </div>
               </li>
               <li>
@@ -618,7 +640,10 @@
                 </div>
                 <div class="details">
                   <h3>Actual Skills</h3>
-                  <p>Some distant orb has power to raise and purify our thoughts like a strain.</p>
+                  <p>
+                    Some distant orb has power to raise and purify our thoughts
+                    like a strain.
+                  </p>
                 </div>
               </li>
               <li>
@@ -627,7 +652,10 @@
                 </div>
                 <div class="details">
                   <h3>Growth Yourself</h3>
-                  <p>Distant orb has power to raise and purify our thoughts like a strain.</p>
+                  <p>
+                    Distant orb has power to raise and purify our thoughts like
+                    a strain.
+                  </p>
                 </div>
               </li>
             </ul>
@@ -647,27 +675,27 @@
           <ul>
             <li>
               <picture>
-                <img src="./images/our_user_1.png" alt="our user">
+                <img src="./images/our_user_1.png" alt="our user" />
               </picture>
             </li>
             <li>
               <picture>
-                <img src="./images/our_user_2.png" alt="our user">
+                <img src="./images/our_user_2.png" alt="our user" />
               </picture>
             </li>
             <li>
               <picture>
-                <img src="./images/our_user_3.png" alt="our user">
+                <img src="./images/our_user_3.png" alt="our user" />
               </picture>
             </li>
             <li>
               <picture>
-                <img src="./images/our_user_4.png" alt="our user">
+                <img src="./images/our_user_4.png" alt="our user" />
               </picture>
             </li>
             <li>
               <picture>
-                <img src="./images/our_user_5.png" alt="our user">
+                <img src="./images/our_user_5.png" alt="our user" />
               </picture>
             </li>
           </ul>
@@ -678,16 +706,14 @@
 
     <!-- our_user_area End -->
 
-   
     <!-- get_started_area Start -->
 
     <section class="get_started_area">
       <div class="container">
         <div class="get_started_content">
           <div class="get_heading">
-            <h3>10K+ Students take this course.
-              What are you waiting for?</h3>
-              <a href="#" class="btn">get started now</a>
+            <h3>10K+ Students take this course. What are you waiting for?</h3>
+            <a href="#" class="btn">get started now</a>
           </div>
         </div>
       </div>
@@ -699,7 +725,72 @@
     <!-- footer_area Start -->
 
     <footer class="footer_area">
-      <div class="container"></div>
+      <div class="container">
+        <div class="footer_content">
+          <div class="footer_links">
+            <nav>
+              <ul>
+                <li>
+                  <h4>Theme Pages</h4>
+                  <ul>
+                    <li><a href="#">Home Pages</a></li>
+                    <li><a href="#"> Pricing</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">About Us</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <h4>Company Bio</h4>
+                  <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Help Center</a></li>
+                    <li><a href="#">Sales Tools Catalog</a></li>
+                    <li><a href="#">Academy</a></li>
+                    <li><a href="#">Support</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <h4>Pathernership</h4>
+                  <ul>
+                    <li><a href="#">Partners</a></li>
+                    <li><a href="#"> Peseller Program</a></li>
+                    <li><a href="#">AI Labs</a></li>
+                    <li><a href="#">Policy</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <h4>Pages</h4>
+                  <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">FAQ</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <h4>Career</h4>
+                  <ul>
+                    <li><a href="#">Opening Post</a></li>
+                    <li><a href="#"> Apply Aplication</a></li>
+                    <li><a href="#">Partner</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer_copyright_content">
+            <p>&copy; 2022 UIDesign.to - All rights reserved.</p>
+            <ul>
+              <li>Follow us on:</li>
+              <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-dribbble"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <!--/container-->
     </footer>
 
